--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1> Let's hope this works</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="jspdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.1.135/jspdf.min.js"></script>
     <script src="index_cards.js"></script>
 </body>
 </html>
